@@ -12,11 +12,10 @@ import com.movieview360.movieview360.request.MovieRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import javax.persistence.EntityNotFoundException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class MovieService {
@@ -39,34 +38,14 @@ public class MovieService {
     }
 
     public Movie getMovieById(Long id) {
-        return movieRepository.findById(id).orElse(null);
-    }
 
-    public MovieRequest getMovieRequestById(Long id) {
-        Movie movie = movieRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Movie not found with id: " + id));
-
-        MovieRequest movieRequest = new MovieRequest();
-        movieRequest.setTitle(movie.getTitle());
-        movieRequest.setDescription(movie.getDescription());
-        movieRequest.setReleaseDate(movie.getReleaseDate());
-        movieRequest.setGenderId(movie.getGender().getId());
-        movieRequest.setImgUrl(movie.getImgUrl());
-        movieRequest.setFavorite(movie.isFavorite());
-
-        List<MovieCastingRequest> castingRequests = new ArrayList<>();
-        for (MovieCasting casting : movie.getCastings()) {
-            MovieCastingRequest castingRequest = new MovieCastingRequest();
-            castingRequest.setCastingId(casting.getCasting().getId());
-            castingRequest.setRole(casting.getRole());
-            castingRequests.add(castingRequest);
+        Optional<Movie> optionalMovie = movieRepository.findById(id);
+        if (optionalMovie.isPresent()) {
+            return optionalMovie.get();
+        } else {
+            throw new NoSuchElementException("Movie with ID " + id + " not found");
         }
-
-        movieRequest.setCastings(castingRequests);
-
-        return movieRequest;
     }
-
 
     public List<Movie> createMovies(List<MovieRequest> movieRequests) {
 
@@ -108,37 +87,36 @@ public class MovieService {
 
         List<MovieCastingRequest> castingRequests = movieRequests.stream()
                 .flatMap(movieRequest -> movieRequest.getCastings().stream())
-                .collect(Collectors.toList());
+                .toList();
 
         return savedMovies;
     }
     public Movie updateMovie(Long id, MovieRequest movieRequest) {
         Optional<Movie> optionalMovie = movieRepository.findById(id);
-        if (optionalMovie.isEmpty()) {
+
+        if (optionalMovie.isPresent()) {
+            Movie movie = optionalMovie.get();
+
+            movie.setTitle(movieRequest.getTitle());
+            movie.setDescription(movieRequest.getDescription());
+            movie.setReleaseDate(movieRequest.getReleaseDate());
+
+            if (movieRequest.getGenderId() != null) {
+                Optional<MovieCategory> optionalCategory = movieCategoryRepository.findById(movieRequest.getGenderId());
+                if (optionalCategory.isPresent()) {
+                    movie.setGender(optionalCategory.get());
+                } else {
+                    return null;
+                }
+            }
+
+            movie.setImgUrl(movieRequest.getImgUrl());
+            //movieToUpdate.setFavorite(movieRequest.isFavorite());
+
+            return movieRepository.save(movie);
+        } else {
             return null;
         }
-
-        Movie movieToUpdate = optionalMovie.get();
-
-
-        movieToUpdate.setTitle(movieRequest.getTitle());
-        movieToUpdate.setDescription(movieRequest.getDescription());
-        movieToUpdate.setReleaseDate(movieRequest.getReleaseDate());
-
-
-        if (movieRequest.getGenderId() != null) {
-            Optional<MovieCategory> optionalCategory = movieCategoryRepository.findById(movieRequest.getGenderId());
-            if (optionalCategory.isPresent()) {
-                movieToUpdate.setGender(optionalCategory.get());
-            } else {
-                return null;
-            }
-        }
-
-        movieToUpdate.setImgUrl(movieRequest.getImgUrl());
-        //movieToUpdate.setFavorite(movieRequest.isFavorite());
-
-        return movieRepository.save(movieToUpdate);
     }
     public void deleteMovie(Long id) {
         movieRepository.deleteById(id);
